# doc-intelligence

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Run_in_Colab.ipynb
src/docintel/: __init__.py  api.py  classify.py  cli.py  data.py  extract.py  ner.py  pipeline.py  segment.py
tests/: test_api.py  test_classify.py  test_cli.py  test_extract.py  test_ner.py  test_pipeline.py  test_segment.py
