[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-intelligence"
version = "0.1.0"
description = "Offline NLP toolkit for intelligent document processing: segment, classify, extract key-values and run hybrid rule+ML NER on business documents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Akshay GC" }]
keywords = [
    "nlp",
    "document-ai",
    "information-extraction",
    "named-entity-recognition",
    "intelligent-document-processing",
    "invoice-parsing",
    "resume-parsing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "joblib>=1.1",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.24", "ruff>=0.1"]

[project.scripts]
docintel = "docintel.cli:main"

[project.urls]
Homepage = "https://github.com/akshaygc/doc-intelligence"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
